--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	dfrobot/DFRobotDFPlayerMini@^1.0.5
 	featherfly/SoftwareSerial@^1.0
+	makuna/DFPlayer Mini Mp3 by Makuna@^1.1.1
